content/vault/v1.12.x/content/docs/audit/index.mdx
---
layout: docs
page_title: Audit Devices
description: Audit devices are mountable devices that log requests and responses in Vault.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-02T11:43:42-05:00
last_modified: 2025-07-25T10:39:53-07:00
# END AUTO GENERATED METADATA
---

# Audit devices

Audit devices are the components in Vault that collectively keep a detailed log of all
requests to Vault, and their responses. Because every operation with Vault is an API
request/response, when using a single audit device, the audit log contains _every_ interaction with
the Vault API, including errors - except for a few paths which do not go via the audit system.

The non-audited paths are:

    sys/init
    sys/seal-status
    sys/seal
    sys/step-down
    sys/unseal
    sys/leader
    sys/health
    sys/rekey/init
    sys/rekey/update
    sys/rekey/verify
    sys/rekey-recovery-key/init
    sys/rekey-recovery-key/update
    sys/rekey-recovery-key/verify
    sys/storage/raft/bootstrap
    sys/storage/raft/join
    sys/internal/ui/feature-flags

and also, if the relevant listener configuration settings allow unauthenticated access:

    sys/metrics
    sys/pprof/*
    sys/in-flight-req

## Enabling multiple devices

When multiple audit devices are enabled, Vault will attempt to send the audit
logs to all of them. This allows you to not only have redundant copies, but also
a way to check for data tampering in the logs themselves.

Vault considers a request to be successful if it can log to *at least* one
configured audit device (see: [Blocked Audit
Devices](/vault/docs/audit#blocked-audit-devices) section below).  Therefore in order
to build a complete picture of all audited actions, use the aggregate/union of
the logs from each audit device.

~> Note: It is **highly recommended** that you configure Vault to use multiple audit
devices. Audit failures can prevent Vault from servicing requests, so it is
important to provide at least one other device.


## Format

Each line in the audit log is a JSON object. The `type` field specifies what
type of object it is. Currently, only two types exist: `request` and `response`.
The line contains all of the information for any given request and response. By
default, all the sensitive information is first hashed before logging in the
audit logs.

## Sensitive information

The audit logs contain the full request and response objects for every
interaction with Vault. The request and response can be matched utilizing a
unique identifier assigned to each request.

Most strings contained within requests and responses are hashed with a salt using HMAC-SHA256. The purpose of the hash is so that secrets aren't in plaintext within your audit logs. However, you're still able to check the value of secrets by generating HMACs yourself; this can be done with the audit device's hash function and salt by using the `/sys/audit-hash` API endpoint (see the documentation for more details).

~> Currently, only strings that come from JSON or returned in JSON are
HMAC'd. Other data types, like integers, booleans, and so on, are passed
through in plaintext. We recommend that all sensitive data be provided as string values
inside all JSON sent to Vault (i.e., that integer values are provided in quotes).

While most strings are hashed, Vault does make some exceptions, such as auth and secrets, and users can enable additional exceptions using the [secrets enable](/vault/docs/commands/secrets/enable) command, and then tune it afterward.

**see also**:

[secrets tune](/vault/docs/commands/secrets/tune)

[auth enable](/vault/docs/commands/auth/enable)

[auth tune](/vault/docs/commands/auth/tune)

## Enabling/Disabling audit devices

When a Vault server is first initialized, no auditing is enabled. Audit
devices must be enabled by a root user using `vault audit enable`.

When enabling an audit device, options can be passed to it to configure it.
For example, the command below enables the file audit device:

```shell-session
$ vault audit enable file file_path=/var/log/vault_audit.log
```

In the command above, we passed the "file_path" parameter to specify the path
where the audit log will be written to. Each audit device has its own
set of parameters. See the documentation to the left for more details.

~> Note: Audit device configuration is replicated to all nodes within a
cluster by default, and to performance/DR secondaries for Vault Enterprise clusters.
Before enabling an audit device, ensure that all nodes within the cluster(s)
will be able to successfully log to the audit device to avoid Vault being
blocked from serving requests.
An audit device can be limited to only within the node's cluster with the [`local`](/vault/api-docs/system/audit#local) parameter.

When an audit device is disabled, it will stop receiving logs immediately.
The existing logs that it did store are untouched.

## Blocked audit devices

Audit device logs are critically important and ignoring auditing failures opens an avenue for attack. Vault will not respond to requests when no enabled audit devices can record them.

Vault can distinguish between two types of audit device failures.

- A blocking failure is one where an attempt to write to the audit device never completes. This is unlikely with a local disk device, but could occure with a network-based audit device.

- When multiple audit devices are enabled, if any of them fail in a non-blocking fashion, Vault requests can still complete successfully provided at least one audit device successfully writes the audit record. If any of the audit devices fail in a blocking fashion however, Vault requests will hang until the blocking is resolved.

In other words, Vault will not complete any requests until the blocked audit device can write.

## Tutorial

Refer to [Blocked Audit Devices](https://learn.hashicorp.com/tutorials/vault/blocked-audit-devices) for a step-by-step tutorial.

## API

Audit devices also have a full HTTP API. Please see the [Audit device API
docs](/vault/api-docs/system/audit) for more details.
